# premier-league-predictor

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile.server  INSTRUCTIONS.md  api.py  config.py  features.py  main.py  model.py  pyproject.toml  requirements.txt  requirements_UI.txt  server.py
.github/workflows/: ci.yml  docker-image.yml
gui/: app.py  widgets.py
tests/: test_features.py
